--- a/requirements.txt
+++ b/requirements.txt
@@ -72,6 +72,7 @@ pure_eval==0.2.3
 pycparser==2.22
 Pygments==2.19.1
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 python-json-logger==3.3.0
 pytz==2025.1
 PyYAML==6.0.2
