--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ ajex/template/test
 ajex/template/__pycache__
 api/services/__pycache__
 api/user_data/__pycache__
-.env
+config.env
 project/__pycache__
+sql
