--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -2,7 +2,7 @@ name: Django CI
 
 on:
   push:
-    branches: [ "main", "dev", "feat/*"]
+    branches: [ "main", "dev"]
   pull_request:
     branches: [ "main" ]
 
