--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
-version: '3.8'
-
 services:
   web:
     build: .
     volumes:
-      - .:/home/ajex
-    expose:
-      - "8000"  
+      - .:/ajex
     env_file:
       - .env
+    ports:
+      - "8080:8000"
+    command: python manage.py runserver 0.0.0.0:8000
