--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,2 @@
-servermanager/__pycache__
-servermanager/api/__pycache__
-servermanager/api/services/ModelsReady/__pycache__
-servermanager/api/services/ModelsReady/CleanCell/__pycache__
+__pycache__/
 .env
-.github
